<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inquisitor</string>
    <string name="hint">Answer</string>
    <string name="text">About:</string>
    <string name="text2">INQUISITOR V1.0.0</string>
    <string name="text3">Developed by Appex Corporation</string>
    <string name="text4">©2015  Anuraag Baishya</string>
    <string name="text5">Licensed under Apache License 2.0</string>
    <string name="fontcourtesy">Fonts: Infinity by Tarin Yuangtrakul</string>
    <string name="end">"Inquisitor salutes you O' Wise One!</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="enter">ENTER THE INQUISITOR</string>
    <string name="quesButton">View Questions</string>
    <string name="whoops">Whoops!</string>
    <string name="no_connection">No Internet connection found.</string>
    <string name="try_again">Please try again.</string>
    <string name="retry">Retry</string>
    <string name="sharemsg">Hi! I\'m using this app called Inquisitor. I think you should try it!</string>
    <string name="sendmsg">Share message via:</string>

    <string name="done_button">DONE</string>
    <string name="hintbutton">HINT</string>
    <string name="googlebutton">GOOGLE</string>
    <string name="correcttoast">Correct!</string>
    <string name="incorrecttoast">Try Again!</string>
    <string name="send_to">Share using:</string>

    <string name="title_activity_about">Inquisitor 1.0.0</string>
    <string name="title_activity_question"/>
    <string name="title_activity_appex">AppexActivity</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_start">Inquisitor</string>

    <string name="title_activity_strt">StrtActivity</string>
    <string name="title_activity_end">EndActivity</string>
    <string name="title_activity_google">GoogleActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_ques_disp">QuesDispActivity</string>





</resources>
