<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <ImageView
        android:id="@+id/no_connection_cloud_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_connection"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:layout_above="@+id/no_connection_cloud_image_view"
        android:textSize="30sp"
        android:text="@string/whoops"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/no_connection_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_connection_cloud_image_view"
        android:text="@string/no_connection"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_connection_text_view"
        android:text="@string/try_again"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:text="@string/retry"
        android:drawableLeft="@drawable/ic_retry"
        android:drawableStart="@drawable/ic_retry"
        android:background="@android:color/transparent"/>
</RelativeLayout>