<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.appex.android.inquisitor.activity.AboutActivity$PlaceholderFragment">
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:text="@string/text"
            android:textColor="@color/text2"
            android:textSize="16pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_text_view" />
        <TextView
            android:text="@string/text2"
            android:textColor="@color/text2"
            android:textSize="14pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_text_view"
            android:layout_marginTop="34dp"
            android:id="@+id/title_text_view" />
        <TextView
            android:text="@string/text3"
            android:textColor="@color/text2"
            android:textSize="11pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/developer_text_view"
            android:layout_below="@+id/title_text_view"
            android:layout_marginTop="34dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:text="@string/text4"
            android:textColor="@color/text2"
            android:textSize="11pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/copyright_text_view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/developer_text_view"/>
        <TextView
            android:id="@+id/github_link_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text2"
            android:textColorLink="@color/text2"
            android:textSize="11pt"
            android:layout_marginTop="34dp"
            android:layout_below="@+id/copyright_text_view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/icon_courtesy_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text2"
            android:textColorLink="@color/text2"
            android:textSize="11pt"
            android:layout_marginTop="34dp"
            android:layout_below="@+id/github_link_text_view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11pt"
            android:textColor="@color/text2"
            android:id="@+id/font_courtesy_text_view"
            android:textColorLink="@color/text2"
            android:layout_marginTop="34dp"
            android:layout_below="@+id/icon_courtesy_text_view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</ScrollView>


